@@ -1015,7 +1015,7 @@ Humanitarian Activity
 Humanitarian Transaction
 
 #search_commitment_txt
-Total Commitment
+Total <b>Outgoing</b> Commitment
 
 #search_commitment_min_txt
 Commitment Threshold Min
