@@ -895,6 +895,7 @@
 		<div class="header_section collapsable">
 			Transactions <span class="count">( {_it./transaction.length||no_length} )</span>
 			<div class="wrap_length">
+				{_it./transaction-11&&_it:transaction-11-length||}
 				{_it./transaction-1&&_it:transaction-1-length||}
 				{_it./transaction-2&&_it:transaction-2-length||}
 				{_it./transaction-3&&_it:transaction-3-length||}
@@ -905,7 +906,6 @@
 				{_it./transaction-8&&_it:transaction-8-length||}
 				{_it./transaction-9&&_it:transaction-9-length||}
 				{_it./transaction-10&&_it:transaction-10-length||}
-				{_it./transaction-11&&_it:transaction-11-length||}
 				{_it./transaction-12&&_it:transaction-12-length||}
 				{_it./transaction-13&&_it:transaction-13-length||}
 				{_it./planned-disbursement&&_it:transaction-14-length||}
@@ -913,6 +913,7 @@
 			</div>
 		</div>
 		<div class="wrap_legend">
+			{_it./transaction-11&&_it:transaction-11-chart||}
 			{_it./transaction-1&&_it:transaction-1-chart||}
 			{_it./transaction-2&&_it:transaction-2-chart||}
 			{_it./transaction-3&&_it:transaction-3-chart||}
@@ -923,13 +924,13 @@
 			{_it./transaction-8&&_it:transaction-8-chart||}
 			{_it./transaction-9&&_it:transaction-9-chart||}
 			{_it./transaction-10&&_it:transaction-10-chart||}
-			{_it./transaction-11&&_it:transaction-11-chart||}
 			{_it./transaction-12&&_it:transaction-12-chart||}
 			{_it./transaction-13&&_it:transaction-13-chart||}
 			{_it./planned-disbursement&&_it:transaction-14-chart||}
 			{_it./budget&&_it:transaction-15-chart||}
 		</div>
 		{all-charts}
+		{_it./transaction-11&&_it:transaction-11||}
 		{_it./transaction-1&&_it:transaction-1||}
 		{_it./transaction-2&&_it:transaction-2||}
 		{_it./transaction-3&&_it:transaction-3||}
@@ -940,7 +941,6 @@
 		{_it./transaction-8&&_it:transaction-8||}
 		{_it./transaction-9&&_it:transaction-9||}
 		{_it./transaction-10&&_it:transaction-10||}
-		{_it./transaction-11&&_it:transaction-11||}
 		{_it./transaction-12&&_it:transaction-12||}
 		{_it./transaction-13&&_it:transaction-13||}
 	</div>
