@@ -3,6 +3,7 @@ Development Portal (2020-04-18 shi)
 Update glossary
 Hide extra filter options for now
 Hide other trending buttons for now
+Reposition transaction type 11 above 1
 
 
 Development Portal (2020-04-17 shi)
